--- a/zammad_tg_bot/locale/ky/LC_MESSAGES/django.po
+++ b/zammad_tg_bot/locale/ky/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Zammad Telegram Bot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-14 05:49+0000\n"
+"POT-Creation-Date: 2025-07-29 04:55+0000\n"
 "PO-Revision-Date: 2025-07-14 05:30+0000\n"
 "Last-Translator: Claude <noreply@anthropic.com>\n"
 "Language-Team: Kyrgyz\n"
@@ -17,31 +17,27 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: zammad_tg_bot/chatbot/views.py:100
+#: zammad_tg_bot/chatbot/views.py:101
 msgid "Adding your note to the ticket..."
 msgstr "Тикетке эскертүүңүздү кошуу..."
 
-#: zammad_tg_bot/chatbot/views.py:105
+#: zammad_tg_bot/chatbot/views.py:106
 msgid "Uploading your photo..."
 msgstr "Сүрөтүңүздү жүктөө..."
 
-#: zammad_tg_bot/chatbot/views.py:116
+#: zammad_tg_bot/chatbot/views.py:117
 msgid "✅ Successfully updated your ticket."
 msgstr "✅ Тикетиңиз ийгиликтүү жаңыртылды."
 
-#: zammad_tg_bot/chatbot/views.py:119
+#: zammad_tg_bot/chatbot/views.py:120
 msgid "❌ Sorry, there was an error updating your ticket."
 msgstr "❌ Кечиресиз, тикетиңизди жаңыртууда ката болду."
 
-#: zammad_tg_bot/chatbot/views.py:131
+#: zammad_tg_bot/chatbot/views.py:132
 msgid "Create New Ticket 📝"
 msgstr "Жаңы тикет түзүү 📝"
 
-#: zammad_tg_bot/chatbot/views.py:132 zammad_tg_bot/chatbot/views.py:246
-msgid "Status"
-msgstr "Статус"
-
-#: zammad_tg_bot/chatbot/views.py:137
+#: zammad_tg_bot/chatbot/views.py:138
 msgid ""
 "Welcome! To create a ticket, please share your contact information by "
 "clicking the button below."
@@ -50,16 +46,18 @@ msgstr ""
 "маалыматыңызды бөлүшүңүз."
 
 #: zammad_tg_bot/chatbot/views.py:148
-msgid "Cancel This Ticket ❌"
-msgstr "Бул тикетти жокко чыгаруу ❌"
-
-#: zammad_tg_bot/chatbot/views.py:154
-#, python-brace-format
+#, fuzzy, python-brace-format
+#| msgid ""
+#| "You have an open ticket: **#{ticket_number}**.\n"
+#| "\n"
+#| "An agent will attend to it as soon as possible. You can add notes or "
+#| "photos by sending them directly to this chat. You can also cancel it "
+#| "below."
 msgid ""
 "You have an open ticket: **#{ticket_number}**.\n"
 "\n"
 "An agent will attend to it as soon as possible. You can add notes or photos "
-"by sending them directly to this chat. You can also cancel it below."
+"by sending them directly to this chat."
 msgstr ""
 "Сизде ачык тикет бар: **#{ticket_number}**.\n"
 "\n"
@@ -67,11 +65,11 @@ msgstr ""
 "жөнөтүп, эскертүүлөрдү же сүрөттөрдү кошо аласыз. Ошондой эле аны төмөндө "
 "жокко чыгара аласыз."
 
-#: zammad_tg_bot/chatbot/views.py:165
+#: zammad_tg_bot/chatbot/views.py:158
 msgid "You do not have any open tickets. Use /start to create one."
 msgstr "Сизде ачык тикеттер жок. Жаңысын түзүү үчүн /start колдонуңуз."
 
-#: zammad_tg_bot/chatbot/views.py:182
+#: zammad_tg_bot/chatbot/views.py:175
 #, python-brace-format
 msgid ""
 "❌ You already have an open ticket: #{ticket_number}. Please wait for it to "
@@ -79,54 +77,195 @@ msgid ""
 msgstr ""
 "❌ Сизде буга чейин ачык тикет бар: #{ticket_number}. Аны чечилишин күтүңүз."
 
-#: zammad_tg_bot/chatbot/views.py:195
+#: zammad_tg_bot/chatbot/views.py:200
+msgid ""
+"❌ No customers available. Please contact an administrator to add customers "
+"first."
+msgstr "❌ Кардарлар жок. Алгач кардарларды кошуу үчүн администраторго кайрылыңыз."
+
+#: zammad_tg_bot/chatbot/views.py:220
+#, python-brace-format
+msgid "Choose the number of you {customer_prefix}?"
+msgstr "Сиздин {customer_prefix} номериңизди тандаңыз?"
+
+#: zammad_tg_bot/chatbot/views.py:240
+msgid "Ticket mistake"
+msgstr "Тикеттеги ката"
+
+#: zammad_tg_bot/chatbot/views.py:241
+msgid "No internet"
+msgstr "Интернет жок"
+
+#: zammad_tg_bot/chatbot/views.py:242
+msgid "One workplace not works"
+msgstr "Бир иш орду иштебейт"
+
+#: zammad_tg_bot/chatbot/views.py:243
+msgid "One fuel pump not works"
+msgstr "Бир майлуу станция иштебейт"
+
+#: zammad_tg_bot/chatbot/views.py:244
+msgid "Gas station not works"
+msgstr "Газ станциясы иштебейт"
+
+#: zammad_tg_bot/chatbot/views.py:250
+msgid "Please select the type of issue you are experiencing:"
+msgstr "Сизде болуп жаткан көйгөйдүн түрүн тандаңыз:"
+
+#: zammad_tg_bot/chatbot/views.py:296
+msgid "❌ Please enter a valid customer number (digits only)."
+msgstr "❌ Туура кардар номерин киргизиңиз (сандар гана)."
+
+#: zammad_tg_bot/chatbot/views.py:306
+#, python-brace-format
+msgid ""
+"❌ Customer number {customer_prefix}{customer_number} not found. Please try "
+"again."
+msgstr "❌ {customer_prefix}{customer_number} кардар номери табылган жок. Дагы аракет кылыңыз."
+
+#: zammad_tg_bot/chatbot/views.py:317
+msgid "❌ Error finding customer. Please try again."
+msgstr "❌ Кардарды издөөдө ката. Дагы аракет кылыңыз."
+
+#: zammad_tg_bot/chatbot/views.py:359
+msgid ""
+"\n"
+"\n"
+"📝 Please provide a text answer."
+msgstr "\n\n📝 Тексттик жооп бериңиз."
+
+#: zammad_tg_bot/chatbot/views.py:361
+msgid ""
+"\n"
+"\n"
+"📸 Please send a photo."
+msgstr "\n\n📸 Сүрөт жөнөтүңүз."
+
+#: zammad_tg_bot/chatbot/views.py:363
+msgid ""
+"\n"
+"\n"
+"☑️ Please select from the options."
+msgstr "\n\n☑️ Вариантардан тандаңыз."
+
+#: zammad_tg_bot/chatbot/views.py:367
+#, python-brace-format
+msgid ""
+"Question {current}/{total}:\n"
+"\n"
+"{question_text}{type_hint}"
+msgstr "Суроо {current}/{total}:\n\n{question_text}{type_hint}"
+
+#: zammad_tg_bot/chatbot/views.py:405
+msgid "❌ This question requires a text answer. Please provide text only."
+msgstr "❌ Бул суроо тексттик жооп талап кылат. Текст гана бериңиз."
+
+#: zammad_tg_bot/chatbot/views.py:411
+msgid "❌ This question requires a photo. Please send a photo."
+msgstr "❌ Бул суроо сүрөт талап кылат. Сүрөт жөнөтүңүз."
+
+#: zammad_tg_bot/chatbot/views.py:458
+msgid "❌ Error: Customer not found. Please start again."
+msgstr "❌ Ката: Кардар табылган жок. Кайра баштаңыз."
+
+#: zammad_tg_bot/chatbot/views.py:476 zammad_tg_bot/chatbot/views.py:538
 msgid "Thank you! Creating your ticket. Please wait..."
 msgstr "Рахмат! Тикетиңизди түзүп жатабыз. Күтүңүз..."
 
-#: zammad_tg_bot/chatbot/views.py:197
+#: zammad_tg_bot/chatbot/views.py:478 zammad_tg_bot/chatbot/views.py:540
 #, python-brace-format
 msgid "New Ticket from Telegram User: {user_name}"
 msgstr "Telegram колдонуучусунан жаңы тикет: {user_name}"
 
-#: zammad_tg_bot/chatbot/views.py:199
-#, python-brace-format
+#: zammad_tg_bot/chatbot/views.py:485
+#, fuzzy, python-brace-format
+#| msgid ""
+#| "A new ticket was requested by Telegram user:\n"
+#| "\n"
+#| "**Name:** {full_name}\n"
+#| "**Username:** @{username}\n"
+#| "**Telegram User ID:** {user_id}\n"
+#| "**Phone Number:** {phone_number}"
 msgid ""
 "A new ticket was requested by Telegram user:\n"
 "\n"
 "**Name:** {full_name}\n"
 "**Username:** @{username}\n"
 "**Telegram User ID:** {user_id}\n"
-"**Phone Number:** {phone_number}"
+"**Phone Number:** {phone_number}\n"
+"**Selected Customer:** {customer_name}\n"
+"**Priority:** {priority_text}{issue_description}"
 msgstr ""
 "Telegram колдонуучусу жаңы тикет суранды:\n"
 "\n"
 "**Аты:** {full_name}\n"
 "**Колдонуучу аты:** @{username}\n"
 "**Telegram ID:** {user_id}\n"
-"**Телефон номери:** {phone_number}"
+"**Телефон номери:** {phone_number}\n"
+"**Тандалган кардар:** {customer_name}\n"
+"**Приоритет:** {priority_text}{issue_description}"
 
-#: zammad_tg_bot/chatbot/views.py:222
-#, python-brace-format
+#: zammad_tg_bot/chatbot/views.py:523 zammad_tg_bot/chatbot/views.py:614
+#, fuzzy, python-brace-format
+#| msgid ""
+#| "✅ Success! Your ticket has been created.\n"
+#| "Ticket Number: **{ticket_number}**"
 msgid ""
 "✅ Success! Your ticket has been created.\n"
-"Ticket Number: **{ticket_number}**"
+"Ticket Number: {ticket_number}\n"
+"Customer: {customer_name}\n"
+"Priority: {priority_text}{issue_info}"
 msgstr ""
 "✅ Ийгилик! Тикетиңиз түзүлдү.\n"
-"Тикет номери: **{ticket_number}**"
+"Тикет номери: {ticket_number}\n"
+"Кардар: {customer_name}\n"
+"Приоритет: {priority_text}{issue_info}"
 
-#: zammad_tg_bot/chatbot/views.py:224
+#: zammad_tg_bot/chatbot/views.py:530 zammad_tg_bot/chatbot/views.py:621
 msgid "❌ Error! Could not create the ticket. Please check the server logs."
 msgstr "❌ Ката! Тикетти түзө алган жок. Сервер логдорун текшериңиз."
 
-#: zammad_tg_bot/chatbot/views.py:252 zammad_tg_bot/chatbot/views.py:262
+#: zammad_tg_bot/chatbot/views.py:548
+#, fuzzy, python-brace-format
+#| msgid ""
+#| "A new ticket was requested by Telegram user:\n"
+#| "\n"
+#| "**Name:** {full_name}\n"
+#| "**Username:** @{username}\n"
+#| "**Telegram User ID:** {user_id}\n"
+#| "**Phone Number:** {phone_number}"
+msgid ""
+"A new ticket was requested by Telegram user:\n"
+"\n"
+"**Name:** {full_name}\n"
+"**Username:** @{username}\n"
+"**Telegram User ID:** {user_id}\n"
+"**Phone Number:** {phone_number}\n"
+"**Selected Customer:** {customer_name}\n"
+"**Priority:** {priority_text}{issue_description}\n"
+"\n"
+"**Additional Information:**\n"
+msgstr ""
+"Telegram колдонуучусу жаңы тикет суранды:\n"
+"\n"
+"**Аты:** {full_name}\n"
+"**Колдонуучу аты:** @{username}\n"
+"**Telegram ID:** {user_id}\n"
+"**Телефон номери:** {phone_number}\n"
+"**Тандалган кардар:** {customer_name}\n"
+"**Приоритет:** {priority_text}{issue_description}\n"
+"\n"
+"**Кошумча маалымат:**\n"
+
+#: zammad_tg_bot/chatbot/views.py:657 zammad_tg_bot/chatbot/views.py:667
 msgid "I'm sorry, I don't understand. Please use /start to create a ticket."
 msgstr "Кечиресиз, түшүнгөн жокмун. Тикет түзүү үчүн /start колдонуңуз."
 
-#: zammad_tg_bot/chatbot/views.py:331
+#: zammad_tg_bot/chatbot/views.py:736
 msgid "✅ Your ticket has been resolved and closed by our support team."
 msgstr "✅ Тикетиңиз колдоо тобубуз тарабынан чечилди жана жабылды."
 
-#: zammad_tg_bot/chatbot/views.py:382
+#: zammad_tg_bot/chatbot/views.py:787
 #, python-brace-format
 msgid ""
 "💬 **Support Agent Response:**\n"
@@ -137,24 +276,71 @@ msgstr ""
 "\n"
 "{message_text}"
 
-#: zammad_tg_bot/chatbot/views.py:394 zammad_tg_bot/chatbot/views.py:402
-#: zammad_tg_bot/chatbot/views.py:412
+#: zammad_tg_bot/chatbot/views.py:799 zammad_tg_bot/chatbot/views.py:807
+#: zammad_tg_bot/chatbot/views.py:817
 #, python-brace-format
 msgid "📎 Agent sent: {filename}"
 msgstr "📎 Агент жөнөттү: {filename}"
 
-#: zammad_tg_bot/chatbot/views.py:484
+#: zammad_tg_bot/chatbot/views.py:904
 msgid "Processing your cancellation..."
 msgstr "Жокко чыгарууну иштетүү..."
 
-#: zammad_tg_bot/chatbot/views.py:495
+#: zammad_tg_bot/chatbot/views.py:915
 msgid "✅ Your ticket has been successfully canceled."
 msgstr "✅ Тикетиңиз ийгиликтүү жокко чыгарылды."
 
-#: zammad_tg_bot/chatbot/views.py:497
+#: zammad_tg_bot/chatbot/views.py:917
 msgid ""
 "❌ There was an error canceling your ticket in Zammad. Please contact an "
 "administrator."
 msgstr ""
 "❌ Zammad'да тикетиңизди жокко чыгарууда ката болду. Администраторго "
 "кайрылыңыз."
+
+#: zammad_tg_bot/chatbot/views.py:933 zammad_tg_bot/chatbot/views.py:942
+#: zammad_tg_bot/chatbot/views.py:1000 zammad_tg_bot/chatbot/views.py:1014
+#: zammad_tg_bot/chatbot/views.py:1025 zammad_tg_bot/chatbot/views.py:1052
+#: zammad_tg_bot/chatbot/views.py:1101
+msgid "Invalid selection"
+msgstr "Туура эмес тандоо"
+
+#: zammad_tg_bot/chatbot/views.py:951 zammad_tg_bot/chatbot/views.py:1034
+msgid "Session expired. Please start again."
+msgstr "Сессиянын убактысы бүттү. Кайра баштаңыз."
+
+#: zammad_tg_bot/chatbot/views.py:953 zammad_tg_bot/chatbot/views.py:1036
+#, fuzzy
+#| msgid "I'm sorry, I don't understand. Please use /start to create a ticket."
+msgid "❌ Session expired. Please use /start to create a new ticket."
+msgstr "❌ Сессиянын убактысы бүттү. Жаңы тикет түзүү үчүн /start колдонуңуз."
+
+#: zammad_tg_bot/chatbot/views.py:964 zammad_tg_bot/chatbot/views.py:1065
+msgid "Customer not found"
+msgstr "Кардар табылган жок"
+
+#: zammad_tg_bot/chatbot/views.py:974
+#, python-brace-format
+msgid "Priority selected: {priority}"
+msgstr "Тандалган приоритет: {priority}"
+
+#: zammad_tg_bot/chatbot/views.py:979
+#, python-brace-format
+msgid "Priority selected: Level {priority} ({priority_text})"
+msgstr "Тандалган приоритет: Деңгээл {priority} ({priority_text})"
+
+#: zammad_tg_bot/chatbot/views.py:1074
+#, python-brace-format
+msgid "Issue selected: {issue}"
+msgstr "Тандалган маселе: {issue}"
+
+#: zammad_tg_bot/chatbot/views.py:1079
+#, python-brace-format
+msgid "Issue Type: {issue} (Priority: {priority_text})"
+msgstr "Маселе түрү: {issue} (Приоритет: {priority_text})"
+
+#~ msgid "Status"
+#~ msgstr "Статус"
+
+#~ msgid "Cancel This Ticket ❌"
+#~ msgstr "Бул тикетти жокко чыгаруу ❌"
