--- a/zammad_tg_bot/locale/ru/LC_MESSAGES/django.po
+++ b/zammad_tg_bot/locale/ru/LC_MESSAGES/django.po
@@ -1,84 +1,171 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Russian translation for Zammad Telegram Bot
+# Copyright (C) 2025
+# This file is distributed under the same license as the package.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Zammad Telegram Bot\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-07-14 05:29+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-11-19 12:00+0000\n"
+"Last-Translator: Claude <noreply@anthropic.com>\n"
+"Language-Team: Russian\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
-"(n%100>=11 && n%100<=14)? 2 : 3);\n"
-#: zammad_tg_bot/chatbot/views.py:100
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
+
+#: zammad_tg_bot/chatbot/views.py:101
 msgid "Adding your note to the ticket..."
-msgstr ""
+msgstr "Добавление вашей заметки к тикету..."
 
-#: zammad_tg_bot/chatbot/views.py:105
+#: zammad_tg_bot/chatbot/views.py:106
 msgid "Uploading your photo..."
-msgstr ""
+msgstr "Загрузка вашего фото..."
 
-#: zammad_tg_bot/chatbot/views.py:116
+#: zammad_tg_bot/chatbot/views.py:117
 msgid "✅ Successfully updated your ticket."
-msgstr ""
+msgstr "✅ Ваш тикет успешно обновлён."
 
-#: zammad_tg_bot/chatbot/views.py:119
+#: zammad_tg_bot/chatbot/views.py:120
 msgid "❌ Sorry, there was an error updating your ticket."
-msgstr ""
+msgstr "❌ Извините, произошла ошибка при обновлении тикета."
 
-#: zammad_tg_bot/chatbot/views.py:131
+#: zammad_tg_bot/chatbot/views.py:132
 msgid "Create New Ticket 📝"
-msgstr ""
+msgstr "Создать новый тикет 📝"
 
-#: zammad_tg_bot/chatbot/views.py:137
-msgid ""
-"Welcome! To create a ticket, please share your contact information by "
-"clicking the button below."
-msgstr ""
+#: zammad_tg_bot/chatbot/views.py:138
+msgid "Welcome! To create a ticket, please share your contact information by clicking the button below."
+msgstr "Добро пожаловать! Чтобы создать тикет, пожалуйста, поделитесь вашей контактной информацией, нажав на кнопку ниже."
 
 #: zammad_tg_bot/chatbot/views.py:148
-msgid "Cancel This Ticket ❌"
-msgstr ""
-
-#: zammad_tg_bot/chatbot/views.py:154
 #, python-brace-format
 msgid ""
 "You have an open ticket: **#{ticket_number}**.\n"
 "\n"
-"An agent will attend to it as soon as possible. You can add notes or photos "
-"by sending them directly to this chat. You can also cancel it below."
+"An agent will attend to it as soon as possible. You can add notes or photos by sending them directly to this chat."
 msgstr ""
+"У вас есть открытый тикет: **#{ticket_number}**.\n"
+"\n"
+"Агент ответит на него как можно скорее. Вы можете добавлять заметки или фото, отправив их прямо в этот чат."
 
-#: zammad_tg_bot/chatbot/views.py:165
+#: zammad_tg_bot/chatbot/views.py:158
 msgid "You do not have any open tickets. Use /start to create one."
-msgstr ""
+msgstr "У вас нет открытых тикетов. Используйте /start, чтобы создать новый."
 
-#: zammad_tg_bot/chatbot/views.py:182
+#: zammad_tg_bot/chatbot/views.py:175
 #, python-brace-format
-msgid ""
-"❌ You already have an open ticket: #{ticket_number}. Please wait for it to "
-"be resolved."
-msgstr ""
+msgid "❌ You already have an open ticket: #{ticket_number}. Please wait for it to be resolved."
+msgstr "❌ У вас уже есть открытый тикет: #{ticket_number}. Пожалуйста, дождитесь его решения."
 
-#: zammad_tg_bot/chatbot/views.py:195
+#: zammad_tg_bot/chatbot/views.py:200
+msgid "❌ No customers available. Please contact an administrator to add customers first."
+msgstr "❌ Нет доступных клиентов. Пожалуйста, свяжитесь с администратором для добавления клиентов."
+
+#: zammad_tg_bot/chatbot/views.py:220
+#, python-brace-format
+msgid "Choose the number of you {customer_prefix}?"
+msgstr "Выберите номер вашей {customer_prefix}?"
+
+#: zammad_tg_bot/chatbot/views.py:240
+msgid "Ticket mistake"
+msgstr "Ошибка в чеке"
+
+#: zammad_tg_bot/chatbot/views.py:241
+msgid "No internet"
+msgstr "Нет интернета"
+
+#: zammad_tg_bot/chatbot/views.py:242
+msgid "My email isn't working"
+msgstr "Почта не работает"
+
+#: zammad_tg_bot/chatbot/views.py:243
+msgid "One workplace not works"
+msgstr "Одна касса не работает"
+
+#: zammad_tg_bot/chatbot/views.py:244
+msgid "One fuel pump not works"
+msgstr "Одна ТРК не работает"
+
+#: zammad_tg_bot/chatbot/views.py:245
+msgid "Gas station not works"
+msgstr "АЗС не работает"
+
+#: zammad_tg_bot/chatbot/views.py:246
+msgid "Everything works but has questions"
+msgstr "Всё работает, но есть вопросы"
+
+#: zammad_tg_bot/chatbot/views.py:252
+msgid "Please select the type of issue you are experiencing:"
+msgstr "Пожалуйста, выберите тип проблемы, с которой вы столкнулись:"
+
+#: zammad_tg_bot/chatbot/views.py:298
+msgid "❌ Please enter a valid customer number (digits only)."
+msgstr "❌ Пожалуйста, введите правильный номер клиента (только цифры)."
+
+#: zammad_tg_bot/chatbot/views.py:308
+#, python-brace-format
+msgid "❌ Customer number {customer_prefix}{customer_number} not found. Please try again."
+msgstr "❌ Клиент {customer_prefix}{customer_number} не найден. Попробуйте ещё раз."
+
+#: zammad_tg_bot/chatbot/views.py:319
+msgid "❌ Error finding customer. Please try again."
+msgstr "❌ Ошибка при поиске клиента. Попробуйте ещё раз."
+
+#: zammad_tg_bot/chatbot/views.py:361
+msgid "\n\n📝 Please provide a text answer."
+msgstr "\n\n📝 Пожалуйста, напишите текстовый ответ."
+
+#: zammad_tg_bot/chatbot/views.py:363
+msgid "\n\n📸 Please send a photo."
+msgstr "\n\n📸 Пожалуйста, отправьте фото."
+
+#: zammad_tg_bot/chatbot/views.py:365
+msgid "\n\n☑️ Please select from the options."
+msgstr "\n\n☑️ Пожалуйста, выберите из вариантов."
+
+#: zammad_tg_bot/chatbot/views.py:369
+#, python-brace-format
+msgid "Question {current}/{total}:\n\n{question_text}{type_hint}"
+msgstr "Вопрос {current}/{total}:\n\n{question_text}{type_hint}"
+
+#: zammad_tg_bot/chatbot/views.py:407
+msgid "❌ This question requires a text answer. Please provide text only."
+msgstr "❌ Этот вопрос требует текстового ответа. Пожалуйста, напишите только текст."
+
+#: zammad_tg_bot/chatbot/views.py:413
+msgid "❌ This question requires a photo. Please send a photo."
+msgstr "❌ Этот вопрос требует фото. Пожалуйста, отправьте фото."
+
+#: zammad_tg_bot/chatbot/views.py:460
+msgid "❌ Error: Customer not found. Please start again."
+msgstr "❌ Ошибка: Клиент не найден. Пожалуйста, начните заново."
+
+#: zammad_tg_bot/chatbot/views.py:477 zammad_tg_bot/chatbot/views.py:538
+msgid "Low"
+msgstr "Низкий"
+
+#: zammad_tg_bot/chatbot/views.py:477 zammad_tg_bot/chatbot/views.py:500
+#: zammad_tg_bot/chatbot/views.py:538 zammad_tg_bot/chatbot/views.py:563
+msgid "Medium"
+msgstr "Средний"
+
+#: zammad_tg_bot/chatbot/views.py:477 zammad_tg_bot/chatbot/views.py:538
+msgid "High"
+msgstr "Высокий"
+
+#: zammad_tg_bot/chatbot/views.py:478 zammad_tg_bot/chatbot/views.py:539
 msgid "Thank you! Creating your ticket. Please wait..."
-msgstr ""
+msgstr "Спасибо! Создаём ваш тикет. Пожалуйста, подождите..."
 
-#: zammad_tg_bot/chatbot/views.py:197
+#: zammad_tg_bot/chatbot/views.py:480 zammad_tg_bot/chatbot/views.py:541
 #, python-brace-format
 msgid "New Ticket from Telegram User: {user_name}"
-msgstr ""
+msgstr "Новый тикет от пользователя Telegram: {user_name}"
 
-#: zammad_tg_bot/chatbot/views.py:199
+#: zammad_tg_bot/chatbot/views.py:487 zammad_tg_bot/chatbot/views.py:548
 #, python-brace-format
 msgid ""
 "A new ticket was requested by Telegram user:\n"
@@ -86,52 +173,89 @@ msgid ""
 "**Name:** {full_name}\n"
 "**Username:** @{username}\n"
 "**Telegram User ID:** {user_id}\n"
-"**Phone Number:** {phone_number}"
+"**Phone Number:** {phone_number}\n"
+"**Selected Customer:** {customer_name}\n"
+"**Priority:** {priority_text}{issue_description}"
 msgstr ""
-
-#: zammad_tg_bot/chatbot/views.py:222
-#, python-brace-format
-msgid ""
-"✅ Success! Your ticket has been created.\n"
-"Ticket Number: **{ticket_number}**"
-msgstr ""
-
-#: zammad_tg_bot/chatbot/views.py:224
-msgid "❌ Error! Could not create the ticket. Please check the server logs."
-msgstr ""
-
-#: zammad_tg_bot/chatbot/views.py:252 zammad_tg_bot/chatbot/views.py:262
-msgid "I'm sorry, I don't understand. Please use /start to create a ticket."
-msgstr ""
-
-#: zammad_tg_bot/chatbot/views.py:331
-msgid "✅ Your ticket has been resolved and closed by our support team."
-msgstr ""
-
-#: zammad_tg_bot/chatbot/views.py:382
-#, python-brace-format
-msgid ""
-"💬 **Support Agent Response:**\n"
+"Новый тикет запрошен пользователем Telegram:\n"
 "\n"
-"{message_text}"
-msgstr ""
+"**Имя:** {full_name}\n"
+"**Имя пользователя:** @{username}\n"
+"**Telegram ID:** {user_id}\n"
+"**Номер телефона:** {phone_number}\n"
+"**Выбранный клиент:** {customer_name}\n"
+"**Приоритет:** {priority_text}{issue_description}"
 
-#: zammad_tg_bot/chatbot/views.py:394 zammad_tg_bot/chatbot/views.py:402
-#: zammad_tg_bot/chatbot/views.py:412
+#: zammad_tg_bot/chatbot/views.py:525 zammad_tg_bot/chatbot/views.py:615
+#, python-brace-format
+msgid "✅ Success! Your ticket has been created.\nTicket Number: {ticket_number}\nCustomer: {customer_name}{issue_info}"
+msgstr "✅ Успешно! Ваш тикет создан.\nНомер тикета: {ticket_number}\nКлиент: {customer_name}{issue_info}"
+
+#: zammad_tg_bot/chatbot/views.py:531 zammad_tg_bot/chatbot/views.py:621
+msgid "❌ Error! Could not create the ticket. Please check the server logs."
+msgstr "❌ Ошибка! Не удалось создать тикет. Пожалуйста, проверьте логи сервера."
+
+#: zammad_tg_bot/chatbot/views.py:656 zammad_tg_bot/chatbot/views.py:667
+msgid "I'm sorry, I don't understand. Please use /start to create a ticket."
+msgstr "Извините, я не понимаю. Пожалуйста, используйте /start, чтобы создать тикет."
+
+#: zammad_tg_bot/chatbot/views.py:755
+msgid "✅ Your ticket has been resolved and closed by our support team."
+msgstr "✅ Ваш тикет был решён и закрыт нашей службой поддержки."
+
+#: zammad_tg_bot/chatbot/views.py:788
+#, python-brace-format
+msgid "💬 **Support Agent Response:**\n\n{message_text}"
+msgstr "💬 **Ответ агента поддержки:**\n\n{message_text}"
+
+#: zammad_tg_bot/chatbot/views.py:799 zammad_tg_bot/chatbot/views.py:807
+#: zammad_tg_bot/chatbot/views.py:817
 #, python-brace-format
 msgid "📎 Agent sent: {filename}"
-msgstr ""
+msgstr "📎 Агент отправил: {filename}"
 
-#: zammad_tg_bot/chatbot/views.py:484
+#: zammad_tg_bot/chatbot/views.py:904
 msgid "Processing your cancellation..."
-msgstr ""
+msgstr "Обработка вашей отмены..."
 
-#: zammad_tg_bot/chatbot/views.py:495
+#: zammad_tg_bot/chatbot/views.py:915
 msgid "✅ Your ticket has been successfully canceled."
-msgstr ""
+msgstr "✅ Ваш тикет успешно отменён."
 
-#: zammad_tg_bot/chatbot/views.py:497
-msgid ""
-"❌ There was an error canceling your ticket in Zammad. Please contact an "
-"administrator."
-msgstr ""
+#: zammad_tg_bot/chatbot/views.py:917
+msgid "❌ There was an error canceling your ticket in Zammad. Please contact an administrator."
+msgstr "❌ Произошла ошибка при отмене тикета в Zammad. Пожалуйста, свяжитесь с администратором."
+
+#: zammad_tg_bot/chatbot/views.py:933 zammad_tg_bot/chatbot/views.py:942
+#: zammad_tg_bot/chatbot/views.py:951 zammad_tg_bot/chatbot/views.py:973
+#: zammad_tg_bot/chatbot/views.py:1010 zammad_tg_bot/chatbot/views.py:1022
+#: zammad_tg_bot/chatbot/views.py:1050 zammad_tg_bot/chatbot/views.py:1063
+#: zammad_tg_bot/chatbot/views.py:1098
+msgid "Invalid selection"
+msgstr "Неверный выбор"
+
+#: zammad_tg_bot/chatbot/views.py:952 zammad_tg_bot/chatbot/views.py:1031
+msgid "Session expired. Please start again."
+msgstr "Сессия истекла. Пожалуйста, начните заново."
+
+#: zammad_tg_bot/chatbot/views.py:954 zammad_tg_bot/chatbot/views.py:1033
+msgid "❌ Session expired. Please use /start to create a new ticket."
+msgstr "❌ Сессия истекла. Пожалуйста, используйте /start, чтобы создать новый тикет."
+
+#: zammad_tg_bot/chatbot/views.py:964 zammad_tg_bot/chatbot/views.py:1063
+msgid "Customer not found"
+msgstr "Клиент не найден"
+
+#: zammad_tg_bot/chatbot/views.py:972 zammad_tg_bot/chatbot/views.py:977
+msgid "Priority selected"
+msgstr "Приоритет выбран"
+
+#: zammad_tg_bot/chatbot/views.py:1072
+#, python-brace-format
+msgid "Issue selected: {issue}"
+msgstr "Проблема выбрана: {issue}"
+
+#: zammad_tg_bot/chatbot/views.py:1077
+#, python-brace-format
+msgid "Issue Type: {issue}"
+msgstr "Тип проблемы: {issue}"
